Closed Bug 482856 Opened 17 years ago Closed 17 years ago

Inconsistent comment for hiding pages in nsNavHistory

Categories

(Toolkit :: Places, defect)

defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1

People

(Reporter: TheOne, Assigned: TheOne)

Details

(Keywords: fixed1.9.1)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; de; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; de; rv:1.9.0.7) Gecko/2009021910 Firefox/3.0.7 In http://mxr.mozilla.org/mozilla-central/source/toolkit/components/places/src/nsNavHistory.cpp#2703 it is said: "Rather, we want to hide pages that do not themselves redirect somewhere else..." That seems not logical, and the code below that comment executes the contrary: if (hidden == 1 && (!aIsRedirect || aTransitionType == TRANSITION_TYPED) && aTransitionType != TRANSITION_EMBED) hidden = 0; // unhide The comment should be changed to: "Rather, we want to hide pages that redirect themselves somewhere else..." Reproducible: Always
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Assignee: nobody → master.of.dl
Attachment #373866 - Flags: review?(mak77)
Attachment #373866 - Flags: review?(mak77) → review+
Comment on attachment 373866 [details] [diff] [review] patch correcting the comment sounds correct to me, thanks.
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 3.6a1
Component: General → Places
OS: Windows Vista → All
Product: Firefox → Toolkit
QA Contact: general → places
Hardware: x86 → All
Target Milestone: Firefox 3.6a1 → ---
Target Milestone: --- → mozilla1.9.2a1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: