Bug 482856 - Inconsistent comment for hiding pages in nsNavHistory. r=mak